--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -3,3 +3,4 @@
 Adjust loading speeds
 Make trams still reliable enough 25-30 years after disappearing from purchase list
 Fix sprite misalignment of MLRV I
+All trams except Horse need electrified tram track
